--- a/Directory/Base.lproj/LaunchScreen.storyboard
+++ b/Directory/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LaunchScreenIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2lu-Kj-hyV">
-                                <rect key="frame" x="87" y="348" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2lu-Kj-hyV">
+                                <rect key="frame" x="157" y="398" width="100" height="100"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2lu-Kj-hyV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="QZb-uk-O6C"/>
+                            <constraint firstItem="2lu-Kj-hyV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="t8F-uj-ZMy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
